--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,8 @@ repositories {
 dependencies {
     // Use JUnit test framework.
     testImplementation 'junit:junit:4.13'
+    testImplementation 'org.mockito:mockito-core:2.7.22'
+
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:29.0-jre'
